--- a/VB/CustomParameterEditorsWPF/app.config
+++ b/VB/CustomParameterEditorsWPF/app.config
@@ -1,7 +1,20 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="DXThemeManager" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+    </sectionGroup>
+  </configSections>
 
 <connectionStrings>
-  <add name="nwind.mdb" connectionString="XpoProvider=MSAccess;Provider=Microsoft.Jet.OLEDB.4.0;Data Source=..\..\App_data\nwind.mdb;Persist Security Info=True" />
+  <add name="nwind" connectionString="XpoProvider=SQLite;Data Source=App_data\nwind.db"/>
 </connectionStrings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup>
+  <userSettings>
+    <DXThemeManager>
+      <setting name="ApplicationThemeName" serializeAs="String">
+        <value>Office2016White</value>
+      </setting>
+    </DXThemeManager>
+  </userSettings>
+</configuration>
